Added multiple new features: eraser, reset button - wipes board clear, colour selector - to draw in many colours

--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
     <div class="header">
         <h1>Etch-A-Sketch</h1>
         <h2>Draw To Your Heart's Content!</h2>
+        <h3>[Click] Draw | [Shift + Click] Erase</h3>
         <button id="change-grid">Change Grid Size</button>
     </div>
+    <div class="colour-selector"></div>
     <div class="parent-container">
         <div class="grid-container"></div>
+        <button id="reset">Reset</button>
     </div>
     <script src="./app.js"></script>
 </body>
